<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".crud">

    <androidx.cardview.widget.CardView
        android:layout_width="411dp"
        android:layout_height="730dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/editTextText8"
                android:layout_width="381dp"
                android:layout_height="48dp"
                android:layout_marginBottom="52dp"
                android:ems="10"
                android:hint="@string/disco__"
                android:inputType="text"
                app:layout_constraintBottom_toTopOf="@+id/imageView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.533"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/editTextText2"
                android:layout_width="381dp"
                android:layout_height="48dp"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:hint="@string/c_dula"
                android:inputType="text"
                app:layout_constraintBottom_toTopOf="@+id/editTextText3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.466"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/editTextText3"
                android:layout_width="381dp"
                android:layout_height="48dp"
                android:layout_marginBottom="28dp"
                android:ems="10"
                android:hint="@string/nombre_per"
                android:inputType="text"
                app:layout_constraintBottom_toTopOf="@+id/editTextText4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.533"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/editTextText4"
                android:layout_width="381dp"
                android:layout_height="48dp"
                android:layout_marginBottom="28dp"
                android:ems="10"
                android:hint="@string/apellido"
                android:inputType="text"
                app:layout_constraintBottom_toTopOf="@+id/editTextText5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.533"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/editTextText5"
                android:layout_width="381dp"
                android:layout_height="48dp"
                android:layout_marginBottom="16dp"
                android:ems="10"
                android:hint="@string/direcci_n"
                android:inputType="text"
                app:layout_constraintBottom_toTopOf="@+id/editTextText7"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.533"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/editTextText7"
                android:layout_width="381dp"
                android:layout_height="48dp"
                android:layout_marginBottom="16dp"
                android:ems="10"
                android:hint="@string/taxi__"
                android:inputType="text"
                app:layout_constraintBottom_toTopOf="@+id/editTextText8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.533"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="131dp"
                android:layout_height="101dp"
                android:layout_marginBottom="76dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/baseline_image_24" />

            <Button
                android:id="@+id/btn_crear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="172dp"
                android:layout_marginBottom="28dp"
                android:text="@string/crear"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btn_cancelar" />

            <Button
                android:id="@+id/btn_cancelar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="28dp"
                android:text="@string/cancelar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="412dp"
        android:layout_height="55dp"
        app:cardBackgroundColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/crear"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>